<resources>
    <string name="app_name">OnePlusLogKit</string>
    <string name="enter_app">OnePlusLogKit is running</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_oem_logkit_main">OnePlusLogkit</string>
    <string name="wireless_conect">Wireless connection</string>
    <string name="connection">Wireless connection</string>
    <string name="modem">network</string>
    <string name="moudle_modem">Modem</string>
    <string name="normal">get normal log</string>
    <string name="special_log">get special log</string>
    <string name="qxdm_log">get QXDM log</string>
    <string name="qxdm_summary">including modules about modem、wifi、audio</string>
    <string name="normal_log">get normal log info</string>
    <string name="moudle_grab">get log as modules</string>
    <string name="moudle_kernel">kernel log info</string>
    <string name="other_log">other log info</string>
    <string name="moudle_other">other</string>
    <string name="open_ams" />
    <string name="close_ams">close debug info about AMS</string>
    <string name="grab_adroidlog">get log info to the specified path</string>
    <string name="save_androidlog">save log info</string>
    <string name="cputhermal_switch">CPU and Thermal Log</string>
    <string name="qxdm_config">QXDM info setting</string>
    <string name="save_config">save setting</string>
    <string name="pack_grab">pack log and share</string>
    <string name="pack_summary">Packaging logs stored in the built-in SD card root directory</string>
    <string name="pack_success">Packaging logs complete</string>
    <string name="file_num">Number of documents (item)</string>
    <string name="log_file_num">file number of each log (item)</string>
    <string name="log_file_size">size of each log (MB)</string>
    <string name="file_size">file size (MB)</string>
    <string name="save">Please select the type of log to save</string>
    <string name="save_modemlog">Please select the type of log to save</string>
    <string name="save_common_modem">modem-common</string>
    <string name="save_voice_modem">modem-voice</string>
    <string name="save_sim_modem">modem-sim-card</string>
    <string name="save_data_modem">modem-data</string>
    <string name="log_num_default">40</string>
    <string name="log_size_default">20</string>
    <string name="save_common">modem-common</string>
    <string name="save_voice">modem-voice</string>
    <string name="save_sim">modem-sim卡</string>
    <string name="save_data">modem-data</string>
    <string name="save_wifi">wifi related</string>
    <string name="save_audio">audio related</string>
    <string name="save_bt">bt related</string>
    <string name="save_sensor">sensor related</string>
    <string name="save_gps">GPS related</string>
    <string name="save_antenna">modem-antenna</string>
    <string name="save_protocol">protocol</string>
    <string name="save_selcte">Manually select</string>
    <string name="remove_grab">Delete history log</string>
    <string name="select_grab">open device log</string>
    <string name="close_grab">close device log</string>
    <string name="modem_tcpdump">modem tcpdump log</string>
    <string name="main_log">Main Log</string>
    <string name="system_log">System Log</string>
    <string name="event_log">Event Log</string>
    <string name="kernel_log">Kernel Log</string>
    <string name="tcpdump_log">Network Tcpdump Log</string>
    <string name="bugreport_log">Save bugreport log at low power</string>
    <string name="systrace_switch">Systrace switch</string>
    <string name="memLog_switch">dump memory log</string>
    <string name="radio_log">Radio Log</string>
    <string name="loglevel">Log Print Level</string>
    <string name="lograw">Log Print Format</string>
    <string name="verbose">Verbose</string>
    <string name="debug">Debug</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="fatal">Fatal</string>
    <string name="silent">Silent</string>
    <string name="brief_raw">Brief</string>
    <string name="process_raw">Process</string>
    <string name="tag_raw">Tag</string>
    <string name="raw_raw">Raw</string>
    <string name="time_raw">Time</string>
    <string name="threadtime_raw">Threadtime</string>
    <string name="long_raw">Long</string>
    <string name="log_size">log size</string>
    <string name="advanced">advanced</string>
    <string name="filter_error">Filter fields contain non-English, digital</string>
    <string name="battery_dumpstate">Battery History</string>
    <string name="device_log_size_notice">file size</string>
    <string name="device_log_number_notice">file number</string>
    <string name="device_log_size_format_error">format error</string>
    <string name="device_log_number_format_error">format error</string>
    <string name="createfile_log_fail">Create a log profile fail</string>
    <string name="createfile_log_success">Create a log profile success</string>
    <string name="delete_log_fail">Delete the log file failed</string>
    <string name="delete_log_success">Delete the log file successfully</string>
    <string name="grab_bluetooth">Bluetooth protocol stack LOG switch</string>
    <string name="grab_bluetooth_sumary">PS: Bluetooth will be turned off, please manually re-open</string>
    <string name="grab_bt_snoop">Bluetooth air bag switch</string>
    <string name="grab_bt_snoop_sumary">PS: turn off the air bag switch when you finish.</string>
    <string name="grab_wifi">get wifi log info</string>
    <string name="grab_gps">get gps log info</string>
    <string name="grab_nfc">get nfc log info</string>
    <string name="grab_nfc_summary">nfc is be close ,need to be reopen by yourself</string>
    <string name="MobileLog">MobileLog</string>
    <string name="ModemLog">ModemLog</string>
    <string name="NetWorkLog">NetWorkLog</string>
    <string name="Logstorage">Log save path</string>
    <string name="Log_type">Save log type</string>
    <string name="Log_dump">Choose whether to open the dump switch</string>
    <string name="dump_switch">dump switch</string>
    <string name="switches">Function Switch</string>
    <string name="raw_screenshot">RAW DATA number</string>
    <string name="filter_log">Filter Field</string>
    <string name="upper_lower">Attention to the case</string>
    <string name="raw_data_error">Number of irregularities</string>
    <string name="log_clean">clear log</string>
    <string name="cache_clean">clear cache?</string>
    <string name="pack_log">Packing log and share?</string>
    <string name="pack_ok">share</string>
    <string name="clean_title">Clear all saved log?</string>
    <string name="clean_ok">ok</string>
    <string name="clean_cancel">cancel</string>
    <string name="log_sdcard">log save to sdcard</string>
    <string name="log_cache">log save to cache and transfer to sdcard</string>
    <string name="assert_moudle">Red screen assertion</string>
    <string name="redassert_control">Select the button to turn on or turn off red screen assertions</string>
    <string name="assert_open">Click to open red screen</string>
    <string name="assert_close">Click to close red screen</string>
    <string name="open_info">Already open red screen</string>
    <string name="close_info">Already close red screen</string>
    <string name="red_clean">Click the button to select clear red screen</string>
    <string name="clean_assert_button">Clear red screen</string>
    <string name="audio_moudle">Audio</string>
    <string name="save_register">Save codec register</string>
    <string name="audio_debug_log">Open the audio dynamic debugging log information</string>
    <string name="audio_qxdm_grab">get QXMD log info about audio</string>
    <string name="save_log">save log</string>
    <string name="save_stop">Pause log</string>
    <string name="clear_cache">clear cache</string>
    <string name="stop_info">Pause to save log</string>
    <string name="save_info">Start saving log</string>
    <string name="clean_info">Clear saved log</string>
    <string name="transfer_log">Move log</string>
    <string name="log_select">Please select the type of log to be saved</string>
    <string name="transfer_info">Manual trigger, log dump to the memory card</string>
    <string name="transfer_cancel">log saved to sdcard, do not need to dump</string>
    <string name="save_codec_finished">saved to /sdcard/oem_log/sound/codec_reg</string>
    <string name="save_codec_failed">failed save codec_reg</string>
    <string name="grab_ps">Grab the current ps information</string>
    <string name="grab_otherInfo">The information needs to be captured, click the button to select</string>
    <string name="grab_top">get top info</string>
    <string name="grab_server">get current service list info</string>
    <string name="grab_dump">dump the current system status dumpsys</string>
    <string name="grab_dumpstate">dumpstate info</string>
    <string name="grab_atrace">get systrace info</string>
    <string name="grab_rpm_and_interrupts">get rpm and interrupts info</string>
    <string name="dump_media_db">Dump media databases</string>
    <string name="grab_bugreport">get bugreport info</string>
    <string name="grab_finish">get info done</string>
    <string name="ps_info">Fetching ps information</string>
    <string name="top_info">Fetching top information</string>
    <string name="server_info">Fetching service list information</string>
    <string name="dumpsys_info">dumping the current system status dumpsys</string>
    <string name="dumpstate_info">dumpstate info</string>
    <string name="atrace_info">Fetching systrace information</string>
    <string name="rpm_int_info">Fetching rpm and interrupts information</string>
    <string name="fetching_media_db">Fetching media databases</string>
    <string name="bugreport_info">Fetching bugreport info</string>
    <string name="debug_means">Debugging tools</string>
    <string name="common_option">Common options</string>
    <string name="tcpdump_opened">tcpdump opened</string>
    <string name="tcpdump_closed">tcpdump closed</string>
    <string name="reboot_confirm">Important notice: need reboot?</string>
    <string name="reboot_message">"1. If restarting the phone will cause bug no longer occur, please click cancel button.
2. If restarting the phone has no negative effect on your testing, please click the reboot botton.
3. If you can not decide it, please contact the developer!"</string>
    <string name="reboot_OK">reboot</string>
    <string name="reboot_cancel">cancel</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="PowerMoniterCurrent">Power Moniter average Current</string>
    <string name="average_current">average current</string>
    <string name="oneclick_customerlog">One-step easy logs</string>
    <string name="oneclick_wifilog">Get Wi-Fi log</string>
    <string name="oneclick_bluetoothlog">Get bluetooth log</string>
    <string name="oneclick_nfclog">Get NFC log</string>
    <string name="oneclick_gpslog">Get GPS log</string>
    <string name="oneclick_closelog">Stop logging</string>
    <string name="oneclick_closelogsummary">Logs will be saved and stored under the oem_log folder in the phone storage</string>
    <string name="oneclick_packagelog">Compress log and share</string>
    <string name="oneclick_pack_summary">Existing logs stored in the phone storage will be compressed and shared</string>
    <string name="oneclick_cleanlog">Delete history logs</string>
    <string name="oneclick_hot_log">Get Hot And Power Issue Log</string>
    <string name="oneclick_modem_signal_log">Get modem Issue Log (Signal)</string>
    <string name="oneclick_modem_data_log">Get modem Issue Log (Data)</string>
    <string name="oneclick_lag_log">Get Lag Issue Log</string>
</resources>