<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/size_et_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/file_size" />
    <EditText android:id="@id/size_et" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:singleLine="true" android:maxLength="4" android:layout_toRightOf="@id/size_et_title" android:layout_alignBottom="@id/size_et_title" android:inputType="number" />
    <TextView android:id="@id/number_et_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/file_num" android:layout_below="@id/size_et_title" android:layout_alignLeft="@id/size_et_title" />
    <EditText android:id="@id/number_et" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:singleLine="true" android:maxLength="4" android:layout_toRightOf="@id/number_et_title" android:layout_alignBottom="@id/number_et_title" android:inputType="number" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="19.0dip" android:layout_marginTop="21.0dip" android:layout_below="@id/number_et_title" android:layout_alignParentLeft="true">
        <RadioGroup android:id="@id/radioGroup1" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" />
            <RadioButton android:id="@id/common_bu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_common" />
            <RadioButton android:id="@id/voice_bu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_voice" />
            <RadioButton android:id="@id/sim_bu" android:layout_width="185.0dip" android:layout_height="wrap_content" android:checked="true" android:text="@string/save_sim" />
            <RadioButton android:id="@id/data_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save_data" />
            <RadioButton android:id="@id/protocol_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/save_protocol" />
            <RadioButton android:id="@id/select_bu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_selcte" />
        </RadioGroup>
        <Button android:id="@id/remove_grab" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remove_grab" />
        <Button android:id="@id/select_grab" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_grab" />
        <Button android:id="@id/close_grab" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/close_grab" />
    </LinearLayout>
</RelativeLayout>