<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/size_et_title" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="19.0dip" android:layout_marginTop="25.0dip" android:text="@string/file_num" />
    <EditText android:id="@id/size_et" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:singleLine="true" android:maxLength="4" android:layout_toRightOf="@id/size_et_title" android:layout_alignBottom="@id/size_et_title" android:inputType="number" />
    <TextView android:id="@id/number_et_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/file_size" android:layout_below="@id/size_et_title" android:layout_alignLeft="@id/size_et_title" />
    <EditText android:id="@id/number_et" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:singleLine="true" android:maxLength="4" android:layout_toRightOf="@id/number_et_title" android:layout_alignBottom="@id/number_et_title" android:inputType="number" />
    <ScrollView android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="21.0dip" android:layout_below="@id/number_et_title" android:layout_alignParentLeft="true">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioGroup android:id="@id/radioGroup1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="19.0dip" android:text="@string/save" />
                <RadioButton android:id="@id/common_bu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_common_modem" />
                <RadioButton android:id="@id/voice_bu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_voice_modem" />
                <RadioButton android:id="@id/sim_bu" android:layout_width="185.0dip" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:checked="true" android:text="@string/save_sim_modem" />
                <RadioButton android:id="@id/data_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_data_modem" />
                <RadioButton android:id="@id/wifi_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_wifi" />
                <RadioButton android:id="@id/audio_bu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_audio" />
                <RadioButton android:id="@id/bt_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_bt" />
                <RadioButton android:id="@id/sensor_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_sensor" />
                <RadioButton android:id="@id/gps_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_gps" />
                <RadioButton android:id="@id/antenna_bu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/save_antenna" />
            </RadioGroup>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="21.0dip" android:layout_below="@id/number_et_title">
                <Button android:id="@id/remove_grab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_grab" android:layout_weight="1.0" />
                <Button android:id="@id/select_grab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_grab" android:layout_weight="1.0" />
                <Button android:id="@id/close_grab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/close_grab" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>